[package]
name = "music-deduper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
blake3 = "1.3.3"
clap = { version = "4.3.1", features = ["derive"] }
ffmpeg-next = "6.0.0"
itertools = "0.10.5"
rayon = "1.7.0"
walkdir = "2.3.3"
